--- a/PersonalCard.csproj
+++ b/PersonalCard.csproj
@@ -14,7 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocX" Version="4.0.25105.5786" />
     <PackageReference Include="MySql.Data" Version="9.2.0" />
+    <PackageReference Include="MySqlBackup.NET" Version="2.3.9" />
   </ItemGroup>
 
   <ItemGroup>
